# cuda-oxide

./: README.md
crates/cargo-oxide/: README.md
crates/cargo-oxide/src/: commands.rs  main.rs
crates/cuda-async/src/: device_future.rs  reclaim.rs
crates/cuda-core/: Cargo.toml
crates/cuda-core/src/: lib.rs
crates/cuda-core/tests/: device_copy_derive.rs
crates/cuda-core/tests/derive_device_copy/: fail_non_device_copy_field.rs  fail_non_device_copy_field.stderr  pass_enum_union.rs  pass_structs.rs
crates/cuda-device/src/: async_copy.rs  convert.rs  grid.rs  lib.rs  shared.rs  warp.rs
crates/cuda-host/src/: launch.rs  lib.rs
crates/cuda-macros/src/: device_copy.rs  lib.rs
crates/dialect-mir/: README.md
crates/dialect-mir/src/: types.rs
crates/dialect-mir/tests/: ops_test.rs
crates/dialect-nvvm/src/ops/: convert.rs  cp_async.rs  mod.rs  warp.rs
crates/dialect-nvvm/tests/: ops_test.rs
crates/llvm-export/src/export/: function.rs  ops.rs  state.rs
crates/mir-importer/src/: pipeline.rs
crates/mir-importer/src/translator/: body.rs  rvalue.rs  statement.rs  types.rs
crates/mir-importer/src/translator/terminator/: helpers.rs  mod.rs
crates/mir-importer/src/translator/terminator/intrinsics/: convert.rs  cp_async.rs  float_math.rs  (+2 more)
crates/mir-lower/src/: lowering.rs
crates/mir-lower/src/convert/: interface_impls.rs  types.rs
crates/mir-lower/src/convert/intrinsics/: common.rs  convert.rs  cp_async.rs  mod.rs  warp.rs
crates/mir-lower/src/convert/ops/: aggregate.rs  arithmetic.rs  call.rs  cast.rs  control_flow.rs  memory.rs
crates/mir-lower/tests/: lowering_test.rs
crates/rustc-codegen-cuda/: README.md  STATUS.md
crates/rustc-codegen-cuda/examples/atomic_f16/: README.md
crates/rustc-codegen-cuda/examples/atomic_f16/src/: main.rs
crates/rustc-codegen-cuda/examples/cbrt_smoke/src/: main.rs
crates/rustc-codegen-cuda/examples/checked_arith/: Cargo.toml
crates/rustc-codegen-cuda/examples/checked_arith/src/: main.rs
crates/rustc-codegen-cuda/examples/cp_async_small/: Cargo.toml
crates/rustc-codegen-cuda/examples/cp_async_small/src/: main.rs
crates/rustc-codegen-cuda/examples/device_closures/src/: main.rs
crates/rustc-codegen-cuda/examples/dotprod/: Cargo.toml
crates/rustc-codegen-cuda/examples/dotprod/src/: main.rs
crates/rustc-codegen-cuda/examples/elect_leader/src/: main.rs
crates/rustc-codegen-cuda/examples/enum_abi_multi_payload/src/: main.rs
crates/rustc-codegen-cuda/examples/error_heap_alloc/src/: main.rs
crates/rustc-codegen-cuda/examples/flash_attention/: Cargo.toml
crates/rustc-codegen-cuda/examples/flash_attention/src/: main.rs
crates/rustc-codegen-cuda/examples/lanemask_scan/: Cargo.toml
crates/rustc-codegen-cuda/examples/lanemask_scan/src/: main.rs
crates/rustc-codegen-cuda/examples/redux_fminmax/: Cargo.toml
crates/rustc-codegen-cuda/examples/redux_fminmax/src/: main.rs
crates/rustc-codegen-cuda/examples/set_discriminant/: README.md
crates/rustc-codegen-cuda/examples/set_discriminant/src/: main.rs
crates/rustc-codegen-cuda/examples/step_by/: Cargo.toml
crates/rustc-codegen-cuda/examples/step_by/src/: main.rs
crates/rustc-codegen-cuda/src/: collector.rs  device_codegen.rs
cuda-oxide-book/appendix/: building-from-source.md  supported-features.md
cuda-oxide-book/compiler/: lowering-pipeline.md
cuda-oxide-book/getting-started/: installation.md
cuda-oxide-book/gpu-programming/: error-handling-and-debugging.md
scripts/: smoketest.sh
