[package]
name = "dotprod"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

# Mark as standalone crate (not part of parent workspace)
[workspace]

# End-to-end test for integer dot product intrinsics (dp4a, dp2a).
# Build with:
#   cargo oxide run dotprod --arch sm_61

[dependencies]
# Device-side intrinsics (dotprod::dp4a_*, dotprod::dp2a_*, thread indexing)
cuda-device = { path = "../../../cuda-device" }

# Host-side utilities (CudaKernel trait, etc.)
cuda-host = { path = "../../../cuda-host" }

# Host-side CUDA runtime
cuda-core = { path = "../../../cuda-core" }
