[package]
name = "flash_attention"
version = "0.1.0"
edition = "2024"
authors = ["cuda-oxide contributors"]
license = "Apache-2.0"

[workspace]

# Flash Attention v2 forward pass example.
# Build with:
#   cargo oxide run flash_attention

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
