[package]
name = "lanemask_scan"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

# Mark as standalone crate (not part of parent workspace)
[workspace]

# This example demonstrates the lane-position special registers
# (`%lanemask_lt`/`le`/`eq`/`ge`/`gt`) and their canonical use: a single-pass
# warp prefix-sum / stream-compaction rank. Build with:
#   cargo oxide run lanemask_scan

[dependencies]
# Device-side intrinsics (warp::lanemask_*, ballot_sync, lane_id, indexing)
cuda-device = { path = "../../../cuda-device" }

# Host-side utilities (CudaKernel trait, etc.)
cuda-host = { path = "../../../cuda-host" }

# Host-side CUDA runtime
cuda-core = { path = "../../../cuda-core" }
